# BoneDDx-PBT16

./: README.md  boneddx-PBT16-train.py  eval.py  losses.py  metrics.py  pyproject.toml  train.py  utils.py
configs/: config.yaml
datasets/: dataset.py
models/: model.py
scripts/: run_cv.py
